--- a/dom/canvas/test/_webgl-conformance.ini
+++ b/dom/canvas/test/_webgl-conformance.ini
@@ -2372,7 +2372,9 @@ support-files = webgl-conformance/../webgl-mochitest/driver-info.js
                 webgl-conformance/resources/webgl-test-harness.js
 
 [webgl-conformance/_wrappers/test_conformance__attribs__gl-bindAttribLocation-aliasing.html]
+skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__attribs__gl-bindAttribLocation-matrix.html]
+skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__attribs__gl-disabled-vertex-attrib.html]
 [webgl-conformance/_wrappers/test_conformance__attribs__gl-enable-vertex-attrib.html]
 [webgl-conformance/_wrappers/test_conformance__attribs__gl-matrix-attributes.html]
@@ -2397,7 +2399,7 @@ skip-if = os == 'android'
 [webgl-conformance/_wrappers/test_conformance__canvas__canvas-test.html]
 [webgl-conformance/_wrappers/test_conformance__canvas__canvas-zero-size.html]
 [webgl-conformance/_wrappers/test_conformance__canvas__drawingbuffer-static-canvas-test.html]
-skip-if = os == 'mac'
+skip-if = (os == 'mac')
 [webgl-conformance/_wrappers/test_conformance__canvas__drawingbuffer-hd-dpi-test.html]
 [webgl-conformance/_wrappers/test_conformance__canvas__drawingbuffer-test.html]
 [webgl-conformance/_wrappers/test_conformance__canvas__draw-webgl-to-canvas-test.html]
@@ -2411,13 +2413,15 @@ skip-if = os == 'mac'
 [webgl-conformance/_wrappers/test_conformance__context__constants-and-properties.html]
 [webgl-conformance/_wrappers/test_conformance__context__context-attribute-preserve-drawing-buffer.html]
 [webgl-conformance/_wrappers/test_conformance__context__context-attributes-alpha-depth-stencil-antialias.html]
-skip-if = (os == 'b2g')
+skip-if = (os == 'b2g') || (os == 'linux')
 [webgl-conformance/_wrappers/test_conformance__context__context-creation-and-destruction.html]
 [webgl-conformance/_wrappers/test_conformance__context__context-creation.html]
 [webgl-conformance/_wrappers/test_conformance__context__context-eviction-with-garbage-collection.html]
 [webgl-conformance/_wrappers/test_conformance__context__context-hidden-alpha.html]
 [webgl-conformance/_wrappers/test_conformance__context__context-release-upon-reload.html]
+skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__context__context-release-with-workers.html]
+skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__context__context-lost-restored.html]
 [webgl-conformance/_wrappers/test_conformance__context__context-lost.html]
 [webgl-conformance/_wrappers/test_conformance__context__context-type-test.html]
@@ -2439,8 +2443,8 @@ skip-if = (os == 'b2g')
 [webgl-conformance/_wrappers/test_conformance__extensions__oes-texture-float-with-image.html]
 [webgl-conformance/_wrappers/test_conformance__extensions__oes-texture-float-with-video.html]
 [webgl-conformance/_wrappers/test_conformance__extensions__oes-texture-float.html]
-fail-if = (os == 'linux')
 [webgl-conformance/_wrappers/test_conformance__extensions__oes-vertex-array-object.html]
+skip-if = (os == 'android') || (os == 'mac')
 [webgl-conformance/_wrappers/test_conformance__extensions__oes-vertex-array-object-bufferData.html]
 [webgl-conformance/_wrappers/test_conformance__extensions__oes-texture-half-float.html]
 [webgl-conformance/_wrappers/test_conformance__extensions__oes-texture-float-linear.html]
@@ -2457,12 +2461,15 @@ fail-if = (os == 'linux')
 [webgl-conformance/_wrappers/test_conformance__extensions__webgl-compressed-texture-s3tc.html]
 [webgl-conformance/_wrappers/test_conformance__extensions__webgl-compressed-texture-size-limit.html]
 [webgl-conformance/_wrappers/test_conformance__extensions__webgl-depth-texture.html]
+skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__extensions__webgl-draw-buffers.html]
+skip-if = (os == 'linux')
 [webgl-conformance/_wrappers/test_conformance__extensions__webgl-shared-resources.html]
 [webgl-conformance/_wrappers/test_conformance__glsl__bugs__angle-d3d11-compiler-error.html]
 [webgl-conformance/_wrappers/test_conformance__glsl__bugs__angle-dx-variable-bug.html]
 [webgl-conformance/_wrappers/test_conformance__glsl__bugs__array-of-struct-with-int-first-position.html]
 [webgl-conformance/_wrappers/test_conformance__glsl__bugs__compare-loop-index-to-uniform.html]
+skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__glsl__bugs__complex-glsl-does-not-crash.html]
 [webgl-conformance/_wrappers/test_conformance__glsl__bugs__conditional-discard-optimization.html]
 [webgl-conformance/_wrappers/test_conformance__glsl__bugs__constant-precision-qualifier.html]
@@ -2474,6 +2481,7 @@ fail-if = (os == 'linux')
 [webgl-conformance/_wrappers/test_conformance__glsl__bugs__nested-functions-should-not-crash.html]
 [webgl-conformance/_wrappers/test_conformance__glsl__bugs__sampler-array-using-loop-index.html]
 [webgl-conformance/_wrappers/test_conformance__glsl__bugs__temp-expressions-should-not-crash.html]
+skip-if = (os == 'android') || (os == 'linux')
 [webgl-conformance/_wrappers/test_conformance__glsl__bugs__uniforms-should-not-lose-values.html]
 [webgl-conformance/_wrappers/test_conformance__glsl__bugs__conditional-discard-in-loop.html]
 [webgl-conformance/_wrappers/test_conformance__glsl__bugs__essl3-shaders-with-webgl1.html]
@@ -2485,6 +2493,7 @@ fail-if = (os == 'linux')
 [webgl-conformance/_wrappers/test_conformance__glsl__constructors__glsl-construct-ivec4.html]
 [webgl-conformance/_wrappers/test_conformance__glsl__constructors__glsl-construct-bvec2.html]
 [webgl-conformance/_wrappers/test_conformance__glsl__constructors__glsl-construct-bvec3.html]
+skip-if = (os == 'mac')
 [webgl-conformance/_wrappers/test_conformance__glsl__constructors__glsl-construct-bvec4.html]
 [webgl-conformance/_wrappers/test_conformance__glsl__constructors__glsl-construct-mat2.html]
 [webgl-conformance/_wrappers/test_conformance__glsl__constructors__glsl-construct-mat3.html]
@@ -2724,6 +2733,7 @@ fail-if = (os == 'linux')
 [webgl-conformance/_wrappers/test_conformance__misc__bad-arguments-test.html]
 [webgl-conformance/_wrappers/test_conformance__misc__boolean-argument-conversion.html]
 [webgl-conformance/_wrappers/test_conformance__misc__delayed-drawing.html]
+skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__misc__error-reporting.html]
 [webgl-conformance/_wrappers/test_conformance__misc__instanceof-test.html]
 [webgl-conformance/_wrappers/test_conformance__misc__invalid-passed-params.html]
@@ -2733,10 +2743,11 @@ skip-if = (os == 'android') || (os == 'b2g') || (os == 'linux')
 [webgl-conformance/_wrappers/test_conformance__misc__functions-returning-strings.html]
 [webgl-conformance/_wrappers/test_conformance__misc__object-deletion-behaviour.html]
 [webgl-conformance/_wrappers/test_conformance__misc__shader-precision-format.html]
+skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__misc__type-conversion-test.html]
 skip-if = (os == 'android') || (os == 'b2g') || (os == 'linux')
 [webgl-conformance/_wrappers/test_conformance__misc__uninitialized-test.html]
-skip-if = os == 'android'
+skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__misc__webgl-specific.html]
 [webgl-conformance/_wrappers/test_conformance__ogles__GL__abs__abs_001_to_006.html]
 [webgl-conformance/_wrappers/test_conformance__ogles__GL__acos__acos_001_to_006.html]
@@ -2894,7 +2905,7 @@ skip-if = os == 'android'
 skip-if = (os == 'android') || (os == 'b2g') || (os == 'linux')
 [webgl-conformance/_wrappers/test_conformance__renderbuffers__feedback-loop.html]
 [webgl-conformance/_wrappers/test_conformance__renderbuffers__framebuffer-object-attachment.html]
-skip-if = os == 'android'
+skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__renderbuffers__framebuffer-state-restoration.html]
 [webgl-conformance/_wrappers/test_conformance__renderbuffers__framebuffer-test.html]
 [webgl-conformance/_wrappers/test_conformance__renderbuffers__renderbuffer-initialization.html]
@@ -2984,11 +2995,11 @@ skip-if = (os == 'android') || (os == 'b2g') || (os == 'linux')
 [webgl-conformance/_wrappers/test_conformance__textures__texture-npot-video.html]
 skip-if = (os == 'android') || (os == 'win')
 [webgl-conformance/_wrappers/test_conformance__textures__texture-npot.html]
-skip-if = os == 'android'
+skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__textures__texture-size.html]
-skip-if = os == 'android'
+skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__textures__texture-size-cube-maps.html]
-skip-if = os == 'android'
+skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__textures__texture-size-limit.html]
 [webgl-conformance/_wrappers/test_conformance__textures__texture-sub-image-cube-maps.html]
 [webgl-conformance/_wrappers/test_conformance__textures__texture-transparent-pixels-initialized.html]
@@ -3028,19 +3039,25 @@ skip-if = os == 'android'
 [webgl-conformance/_wrappers/test_conformance__more__conformance__quickCheckAPI-L_S.html]
 [webgl-conformance/_wrappers/test_conformance__more__conformance__quickCheckAPI-S_V.html]
 [webgl-conformance/_wrappers/test_conformance__more__conformance__webGLArrays.html]
+skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__more__functions__bindBuffer.html]
 [webgl-conformance/_wrappers/test_conformance__more__functions__bindBufferBadArgs.html]
 [webgl-conformance/_wrappers/test_conformance__more__functions__bindFramebufferLeaveNonZero.html]
 [webgl-conformance/_wrappers/test_conformance__more__functions__bufferData.html]
+skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__more__functions__bufferDataBadArgs.html]
+skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__more__functions__bufferSubData.html]
+skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__more__functions__bufferSubDataBadArgs.html]
+skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__more__functions__copyTexImage2D.html]
 [webgl-conformance/_wrappers/test_conformance__more__functions__copyTexImage2DBadArgs.html]
 [webgl-conformance/_wrappers/test_conformance__more__functions__copyTexSubImage2D.html]
 [webgl-conformance/_wrappers/test_conformance__more__functions__copyTexSubImage2DBadArgs.html]
 [webgl-conformance/_wrappers/test_conformance__more__functions__deleteBufferBadArgs.html]
 [webgl-conformance/_wrappers/test_conformance__more__functions__drawArrays.html]
+skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__more__functions__drawArraysOutOfBounds.html]
 [webgl-conformance/_wrappers/test_conformance__more__functions__drawElements.html]
 [webgl-conformance/_wrappers/test_conformance__more__functions__drawElementsBadArgs.html]
