--- a/dom/canvas/test/webgl-conformance/mochitest-errata.ini
+++ b/dom/canvas/test/webgl-conformance/mochitest-errata.ini
@@ -72,45 +72,118 @@ skip-if = (os == 'android') || (os == 'win')
 # Causes frequent *blues*: "DMError: Remote Device Error: unable to
 # connect to 127.0.0.1 after 5 attempts" on 'Android 2.3 Opt'.
 skip-if = os == 'android'
+
+########################################################################
+# Android and Linux
+[_wrappers/test_conformance__glsl__bugs__temp-expressions-should-not-crash.html]
+# Coincidentally enough, crashes on Linux and Android 4.0.
+skip-if = (os == 'android') || (os == 'linux')
+
+########################################################################
+# B2G and Linux
+[_wrappers/test_conformance__context__context-attributes-alpha-depth-stencil-antialias.html]
+# Asserts on 'B2G ICS Emulator Debug' and linux debug.
+skip-if = (os == 'b2g') || (os == 'linux')
+
+########################################################################
+# Android and Mac
+[_wrappers/test_conformance__extensions__oes-vertex-array-object.html]
+# Crashes in driver on android 4.0 slaves and on Mac
+# Crashes in driver
+skip-if = (os == 'android') || (os == 'mac')
+
+########################################################################
+# Android
+[_wrappers/test_conformance__attribs__gl-bindAttribLocation-aliasing.html]
+# Crashes with OOM on android 2.3 slaves
+skip-if = (os == 'android')
+[_wrappers/test_conformance__attribs__gl-bindAttribLocation-matrix.html]
+# Crashes with OOM on android 2.3 slaves
+skip-if = (os == 'android')
+[_wrappers/test_conformance__context__context-release-upon-reload.html]
+# Times out
+skip-if = (os == 'android')
+[_wrappers/test_conformance__context__context-release-with-workers.html]
+# Times out
+skip-if = (os == 'android')
+[_wrappers/test_conformance__extensions__webgl-depth-texture.html]
+# Crashes on android 4.0 slaves
+skip-if = (os == 'android')
+[_wrappers/test_conformance__glsl__bugs__compare-loop-index-to-uniform.html]
+# Crashes on android 2.3 slaves
+skip-if = (os == 'android')
+[_wrappers/test_conformance__misc__delayed-drawing.html]
+# Times out on 2.3
+skip-if = (os == 'android')
+[_wrappers/test_conformance__misc__shader-precision-format.html]
+# Times out on 2.3
+skip-if = (os == 'android')
 [_wrappers/test_conformance__misc__uninitialized-test.html]
 # Crashes on Android.
-skip-if = os == 'android'
+skip-if = (os == 'android')
+[_wrappers/test_conformance__more__conformance__webGLArrays.html]
+# Times out on 2.3
+skip-if = (os == 'android')
+[_wrappers/test_conformance__more__functions__bufferData.html]
+# Times out on 2.3
+skip-if = (os == 'android')
+[_wrappers/test_conformance__more__functions__bufferDataBadArgs.html]
+# Times out on 2.3
+skip-if = (os == 'android')
+[_wrappers/test_conformance__more__functions__bufferSubData.html]
+# Times out on 2.3
+skip-if = (os == 'android')
+[_wrappers/test_conformance__more__functions__bufferSubDataBadArgs.html]
+# Times out on 2.3
+skip-if = (os == 'android')
+[_wrappers/test_conformance__more__functions__drawArrays.html]
+# Times out on 2.3
+skip-if = (os == 'android')
 [_wrappers/test_conformance__renderbuffers__framebuffer-object-attachment.html]
 # Crashes on Android.
-skip-if = os == 'android'
+skip-if = (os == 'android')
 [_wrappers/test_conformance__textures__texture-size.html]
 # Crashes on Android 4.0.
-skip-if = os == 'android'
+skip-if = (os == 'android')
 [_wrappers/test_conformance__textures__texture-size-cube-maps.html]
 # Crashes on Android 4.0.
-skip-if = os == 'android'
+skip-if = (os == 'android')
 [_wrappers/test_conformance__textures__texture-npot.html]
 # Intermittent fail on Android 4.0.
-skip-if = os == 'android'
+skip-if = (os == 'android')
 
 ########################################################################
 # B2G
-[_wrappers/test_conformance__context__context-attributes-alpha-depth-stencil-antialias.html]
-# Asserts on 'B2G ICS Emulator Debug'.
-skip-if = (os == 'b2g')
 [_wrappers/test_conformance__textures__tex-image-and-uniform-binding-bugs.html]
 # Intermittently asserts on 'B2G ICS Emulator Debug'.
 skip-if = (os == 'b2g')
 
 ########################################################################
 # Linux
-[_wrappers/test_conformance__extensions__oes-texture-float.html]
-# Failures after enabling color_buffer_[half_]float.
-fail-if = (os == 'linux')
+[_wrappers/test_conformance__extensions__webgl-draw-buffers.html]
+# Crashes
+skip-if = (os == 'linux')
 
 ########################################################################
 # Mac
 [_wrappers/test_conformance__canvas__drawingbuffer-static-canvas-test.html]
 # Intermittent crash on OSX.
-skip-if = os == 'mac'
+skip-if = (os == 'mac')
 [_wrappers/test_conformance__canvas__viewport-unchanged-upon-resize.html]
 # New OSX r7 machines and 10.10.5 is causing perma failure (bug 1216549)
-skip-if = os == 'mac'
+skip-if = (os == 'mac')
+[_wrappers/test_conformance__glsl__constructors__glsl-construct-bvec3.html]
+# Crashes
+skip-if = (os == 'mac')
+[_wrappers/test_conformance__rendering__line-loop-tri-fan.html]
+# Fails on OS X 10.10
+fail-if = (os == 'mac' && os_version == '10.10')
+[_wrappers/test_conformance__rendering__point-size.html]
+# Fails on OS X 10.10
+fail-if = (os == 'mac' && os_version == '10.10')
+[_wrappers/test_conformance__textures__copy-tex-image-and-sub-image-2d.html]
+# Fails on OS X 10.10
+fail-if = (os == 'mac' && os_version == '10.10')
 
 ########################################################################
 # Win
