Reduce file name length to appease Windows.

--- a/dom/canvas/test/_webgl-conformance.ini
+++ b/dom/canvas/test/_webgl-conformance.ini
@@ -816,9 +816,9 @@ support-files = webgl-conformance/../webgl-mochitest/driver-info.js
                 webgl-conformance/conformance/ogles/GL/build/while1_frag.frag
                 webgl-conformance/conformance/ogles/GL/build/while2_frag.frag
                 webgl-conformance/conformance/ogles/GL/build/while_frag.frag
-                webgl-conformance/conformance/ogles/GL/built_in_varying_array_out_of_bounds/built_in_varying_array_out_of_bounds_001_to_001.html
-                webgl-conformance/conformance/ogles/GL/built_in_varying_array_out_of_bounds/gl_Color_array_index_out_of_bounds_frag.frag
-                webgl-conformance/conformance/ogles/GL/built_in_varying_array_out_of_bounds/input.run.txt
+                webgl-conformance/conformance/ogles/GL/built_ins/built_in_varying_array_out_of_bounds_001_to_001.html
+                webgl-conformance/conformance/ogles/GL/built_ins/gl_Color_array_index_out_of_bounds_frag.frag
+                webgl-conformance/conformance/ogles/GL/built_ins/input.run.txt
                 webgl-conformance/conformance/ogles/GL/ceil/ceil_001_to_006.html
                 webgl-conformance/conformance/ogles/GL/ceil/ceil_float_frag_xvary.frag
                 webgl-conformance/conformance/ogles/GL/ceil/ceil_float_frag_xvary_ref.frag
@@ -2505,6 +2505,7 @@ skip-if = (os == 'mac')
 [webgl-conformance/_wrappers/test_conformance__glsl__functions__glsl-function-acos.html]
 [webgl-conformance/_wrappers/test_conformance__glsl__functions__glsl-function-asin.html]
 [webgl-conformance/_wrappers/test_conformance__glsl__functions__glsl-function-atan.html]
+skip-if = (os == 'linux')
 [webgl-conformance/_wrappers/test_conformance__glsl__functions__glsl-function-atan-xy.html]
 [webgl-conformance/_wrappers/test_conformance__glsl__functions__glsl-function-ceil.html]
 [webgl-conformance/_wrappers/test_conformance__glsl__functions__glsl-function-clamp-float.html]
@@ -2700,6 +2701,7 @@ skip-if = (os == 'mac')
 [webgl-conformance/_wrappers/test_conformance__glsl__misc__shader-with-short-circuiting-operators.html]
 [webgl-conformance/_wrappers/test_conformance__glsl__misc__shader-with-global-variable-precision-mismatch.html]
 [webgl-conformance/_wrappers/test_conformance__glsl__misc__large-loop-compile.html]
+skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__glsl__misc__struct-equals.html]
 [webgl-conformance/_wrappers/test_conformance__glsl__misc__struct-mixed-array-declarators.html]
 [webgl-conformance/_wrappers/test_conformance__glsl__misc__struct-nesting-of-variable-names.html]
@@ -2783,7 +2785,7 @@ skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__ogles__GL__build__build_161_to_168.html]
 [webgl-conformance/_wrappers/test_conformance__ogles__GL__build__build_169_to_176.html]
 [webgl-conformance/_wrappers/test_conformance__ogles__GL__build__build_177_to_178.html]
-[webgl-conformance/_wrappers/test_conformance__ogles__GL__built_in_varying_array_out_of_bounds__built_in_varying_array_out_of_bounds_001_to_001.html]
+[webgl-conformance/_wrappers/test_conformance__ogles__GL__built_ins__built_in_varying_array_out_of_bounds_001_to_001.html]
 [webgl-conformance/_wrappers/test_conformance__ogles__GL__ceil__ceil_001_to_006.html]
 [webgl-conformance/_wrappers/test_conformance__ogles__GL__clamp__clamp_001_to_006.html]
 [webgl-conformance/_wrappers/test_conformance__ogles__GL__control_flow__control_flow_001_to_008.html]
@@ -2847,6 +2849,7 @@ skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__ogles__GL__normalize__normalize_001_to_006.html]
 [webgl-conformance/_wrappers/test_conformance__ogles__GL__not__not_001_to_004.html]
 [webgl-conformance/_wrappers/test_conformance__ogles__GL__notEqual__notEqual_001_to_008.html]
+skip-if = (os == 'linux')
 [webgl-conformance/_wrappers/test_conformance__ogles__GL__notEqual__notEqual_009_to_012.html]
 [webgl-conformance/_wrappers/test_conformance__ogles__GL__operators__operators_001_to_008.html]
 [webgl-conformance/_wrappers/test_conformance__ogles__GL__operators__operators_009_to_016.html]
@@ -2859,6 +2862,7 @@ skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__ogles__GL__reflect__reflect_001_to_006.html]
 [webgl-conformance/_wrappers/test_conformance__ogles__GL__refract__refract_001_to_006.html]
 [webgl-conformance/_wrappers/test_conformance__ogles__GL__sign__sign_001_to_006.html]
+skip-if = (os == 'linux')
 [webgl-conformance/_wrappers/test_conformance__ogles__GL__sin__sin_001_to_006.html]
 [webgl-conformance/_wrappers/test_conformance__ogles__GL__smoothstep__smoothstep_001_to_006.html]
 [webgl-conformance/_wrappers/test_conformance__ogles__GL__sqrt__sqrt_001_to_006.html]
@@ -2954,6 +2958,7 @@ skip-if = (os == 'android') || (os == 'b2g') || (os == 'linux')
 [webgl-conformance/_wrappers/test_conformance__textures__tex-image-and-sub-image-2d-with-canvas-rgba4444.html]
 [webgl-conformance/_wrappers/test_conformance__textures__tex-image-and-sub-image-2d-with-canvas-rgba5551.html]
 [webgl-conformance/_wrappers/test_conformance__textures__tex-image-and-sub-image-2d-with-image-data.html]
+skip-if = (os == 'linux')
 [webgl-conformance/_wrappers/test_conformance__textures__tex-image-and-sub-image-2d-with-image-data-rgb565.html]
 [webgl-conformance/_wrappers/test_conformance__textures__tex-image-and-sub-image-2d-with-image-data-rgba4444.html]
 [webgl-conformance/_wrappers/test_conformance__textures__tex-image-and-sub-image-2d-with-image-data-rgba5551.html]
