--- a/dom/canvas/test/webgl-conformance/mochitest-errata.ini
+++ b/dom/canvas/test/webgl-conformance/mochitest-errata.ini
@@ -112,6 +112,9 @@ skip-if = (os == 'android')
 [_wrappers/test_conformance__glsl__bugs__compare-loop-index-to-uniform.html]
 # Crashes on android 2.3 slaves
 skip-if = (os == 'android')
+[_wrappers/test_conformance__glsl__misc__large-loop-compile.html]
+# Crashes on android 4.0 slaves
+skip-if = (os == 'android')
 [_wrappers/test_conformance__misc__delayed-drawing.html]
 # Times out on 2.3
 skip-if = (os == 'android')
@@ -161,6 +164,18 @@ skip-if = (os == 'b2g')
 ########################################################################
 # Linux
 [_wrappers/test_conformance__extensions__webgl-draw-buffers.html]
+# Crashes
+skip-if = (os == 'linux')
+[_wrappers/test_conformance__glsl__functions__glsl-function-atan.html]
+# Crashes
+skip-if = (os == 'linux')
+[_wrappers/test_conformance__ogles__GL__notEqual__notEqual_001_to_008.html]
+# Crashes
+skip-if = (os == 'linux')
+[_wrappers/test_conformance__ogles__GL__sign__sign_001_to_006.html]
+# Crashes
+skip-if = (os == 'linux')
+[_wrappers/test_conformance__textures__tex-image-and-sub-image-2d-with-image-data.html]
 # Crashes
 skip-if = (os == 'linux')
 
