--- a/dom/canvas/test/_webgl-conformance.ini
+++ b/dom/canvas/test/_webgl-conformance.ini
@@ -3064,8 +3064,11 @@ skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__more__functions__drawArrays.html]
 skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__more__functions__drawArraysOutOfBounds.html]
+skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__more__functions__drawElements.html]
+skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__more__functions__drawElementsBadArgs.html]
+skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__more__functions__isTests.html]
 [webgl-conformance/_wrappers/test_conformance__more__functions__isTestsBadArgs.html]
 [webgl-conformance/_wrappers/test_conformance__more__functions__readPixels.html]
@@ -3073,6 +3076,7 @@ skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__more__functions__texImage2D.html]
 [webgl-conformance/_wrappers/test_conformance__more__functions__texImage2DBadArgs.html]
 [webgl-conformance/_wrappers/test_conformance__more__functions__texImage2DHTML.html]
+skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__more__functions__texImage2DHTMLBadArgs.html]
 [webgl-conformance/_wrappers/test_conformance__more__functions__texSubImage2D.html]
 [webgl-conformance/_wrappers/test_conformance__more__functions__texSubImage2DBadArgs.html]
