--- a/dom/canvas/test/webgl-conformance/mochitest-errata.ini
+++ b/dom/canvas/test/webgl-conformance/mochitest-errata.ini
@@ -142,6 +142,18 @@ skip-if = (os == 'android')
 [_wrappers/test_conformance__more__functions__drawArrays.html]
 # Times out on 2.3
 skip-if = (os == 'android')
+[_wrappers/test_conformance__more__functions__drawArraysOutOfBounds.html]
+# Times out on 2.3
+skip-if = (os == 'android')
+[_wrappers/test_conformance__more__functions__drawElements.html]
+# Times out on 2.3
+skip-if = (os == 'android')
+[_wrappers/test_conformance__more__functions__drawElementsBadArgs.html]
+# Times out on 2.3
+skip-if = (os == 'android')
+[_wrappers/test_conformance__more__functions__texImage2DHTML.html]
+# Times out on 2.3
+skip-if = (os == 'android')
 [_wrappers/test_conformance__renderbuffers__framebuffer-object-attachment.html]
 # Crashes on Android.
 skip-if = (os == 'android')
