Regen to remove extensions/foo.html reference.

--- a/dom/canvas/test/_webgl-conformance.ini
+++ b/dom/canvas/test/_webgl-conformance.ini
@@ -76,7 +76,6 @@ support-files = webgl-conformance/../webgl-mochitest/driver-info.js
                 webgl-conformance/conformance/extensions/ext-sRGB.html
                 webgl-conformance/conformance/extensions/ext-shader-texture-lod.html
                 webgl-conformance/conformance/extensions/ext-texture-filter-anisotropic.html
-                webgl-conformance/conformance/extensions/foo.html
                 webgl-conformance/conformance/extensions/get-extension.html
                 webgl-conformance/conformance/extensions/oes-element-index-uint.html
                 webgl-conformance/conformance/extensions/oes-standard-derivatives.html
@@ -2279,7 +2278,6 @@ support-files = webgl-conformance/../webgl-mochitest/driver-info.js
                 webgl-conformance/conformance/textures/compressed-tex-image.html
                 webgl-conformance/conformance/textures/copy-tex-image-2d-formats.html
                 webgl-conformance/conformance/textures/copy-tex-image-and-sub-image-2d.html
-                webgl-conformance/conformance/textures/copy-tex-image-formats.html
                 webgl-conformance/conformance/textures/default-texture.html
                 webgl-conformance/conformance/textures/gl-get-tex-parameter.html
                 webgl-conformance/conformance/textures/gl-pixelstorei.html
@@ -2409,7 +2407,7 @@ skip-if = (os == 'mac')
 [webgl-conformance/_wrappers/test_conformance__canvas__texture-bindings-unaffected-on-resize.html]
 [webgl-conformance/_wrappers/test_conformance__canvas__to-data-url-test.html]
 [webgl-conformance/_wrappers/test_conformance__canvas__viewport-unchanged-upon-resize.html]
-skip-if = os == 'mac'
+skip-if = (os == 'mac')
 [webgl-conformance/_wrappers/test_conformance__context__constants-and-properties.html]
 [webgl-conformance/_wrappers/test_conformance__context__context-attribute-preserve-drawing-buffer.html]
 [webgl-conformance/_wrappers/test_conformance__context__context-attributes-alpha-depth-stencil-antialias.html]
@@ -2931,11 +2929,13 @@ skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__rendering__negative-one-index.html]
 [webgl-conformance/_wrappers/test_conformance__rendering__point-no-attributes.html]
 [webgl-conformance/_wrappers/test_conformance__rendering__point-size.html]
+fail-if = (os == 'mac' && os_version == '10.10')
 [webgl-conformance/_wrappers/test_conformance__rendering__point-with-gl-pointcoord-in-fragment-shader.html]
 [webgl-conformance/_wrappers/test_conformance__rendering__polygon-offset.html]
 [webgl-conformance/_wrappers/test_conformance__rendering__simple.html]
 [webgl-conformance/_wrappers/test_conformance__rendering__triangle.html]
 [webgl-conformance/_wrappers/test_conformance__rendering__line-loop-tri-fan.html]
+fail-if = (os == 'mac' && os_version == '10.10')
 [webgl-conformance/_wrappers/test_conformance__state__gl-enable-enum-test.html]
 [webgl-conformance/_wrappers/test_conformance__state__gl-enum-tests.html]
 [webgl-conformance/_wrappers/test_conformance__state__gl-get-calls.html]
@@ -2945,6 +2945,7 @@ skip-if = (os == 'android')
 [webgl-conformance/_wrappers/test_conformance__state__state-uneffected-after-compositing.html]
 [webgl-conformance/_wrappers/test_conformance__textures__compressed-tex-image.html]
 [webgl-conformance/_wrappers/test_conformance__textures__copy-tex-image-and-sub-image-2d.html]
+fail-if = (os == 'mac' && os_version == '10.10')
 [webgl-conformance/_wrappers/test_conformance__textures__copy-tex-image-2d-formats.html]
 [webgl-conformance/_wrappers/test_conformance__textures__default-texture.html]
 [webgl-conformance/_wrappers/test_conformance__textures__gl-get-tex-parameter.html]
